# scryfall-moxfield-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  save_moxfield_credentials.py
docs/superpowers/plans/: 2026-03-25-scryfallmcp.md
docs/superpowers/specs/: 2026-03-25-scryfallmcp-design.md
scryfallmcp/: server.py
scryfallmcp/moxfield/: auth.py  client.py
scryfallmcp/scryfall/: client.py
tests/moxfield/: test_auth.py  test_client.py
tests/scryfall/: test_client.py
