[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scryfallmcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "httpx",
    "playwright",
    "tenacity",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio>=0.21", "respx"]

[project.scripts]
scryfallmcp = "scryfallmcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
